Polishing touches to JS DOM article

--- a/docs/js/js-dom.mdx
+++ b/docs/js/js-dom.mdx
@@ -66,7 +66,7 @@ As you can see, there are many options you can leverage.
 
 ### Should you use getElement or querySelector?
 
-It depends on the purpose. The rule of thumb is that if one of the `getElement` selectors can do the job, it's a better choice performance-wise (the longer HTML, the bigger difference). However, for more complex selections, the newer `querySelector` family might be better or the only possible choice.
+It depends on the purpose. The rule of thumb is that if one of the `getElement` selectors can do the job, it's a better choice performance-wise (the longer HTML, the bigger difference). However, for complex selections, the newer `querySelector` family might be better or the only possible choice.
 
 ```js title="Good use cases for the querySelector family"
 // Instead of using three getElement selectors (that wouldn't even work in this example, more on that in the next paragraph)
@@ -81,7 +81,7 @@ document.querySelectorAll('input[type="checkbox"]');
 As always, the devil lies in the details. While chained `getElement` selectors will have better performance than clean `querySelector`, there are three issues with the former:
 
 1. Readability: after two or three chained selectors, the `getElement` chain gets really hard to read and debug; the natural CSS3 style of `querySelector` is straightforward.
-2. Flexibility: you can only chain `getElements` on single elements. Refering to the previous code sample, while the `.getElementsByClassName('DataCell')` called on single outcome of `.getElementById('attributes-repeater')` works, returned collection of outcomes would crash the `.getElementsByTagName('tr')` that works only on single element scope.
+2. Flexibility: you can only chain `getElements` on single element. Refering to the previous code sample, while the `.getElementsByClassName('DataCell')` called on single outcome of `.getElementById('attributes-repeater')` works, the collection it will return would crash the `.getElementsByTagName('tr')` as the chaining works only on single element scope.
 3. Loopability: outcomes of `getElements` selection cannot be looped using [`forEach()`](./js-loops.mdx#foreach).
 
 My approach is to use the more flexible and readable `querySelector` whenever performance is not a dealbreaker and switch where possible to the `getElement` toolset for use cases where the performance is crucial.
@@ -119,11 +119,11 @@ Selecting elements is just the beginning. Once you pick them, you can [explore](
 
 ## Exploring the DOM
 
-Once you select the page element, you can learn more about it, thanks to properties. There is a [long list](https://developer.mozilla.org/en-US/docs/Web/API/Element]) of available features, so let's focus on the ones most useful in marketing automation and the real-time personalisation world.
+Once you select a page element, you can learn more about it, thanks to properties. There is a [long list](https://developer.mozilla.org/en-US/docs/Web/API/Element]) of available features, so let's focus on the ones most useful in marketing automation and real-time personalisation world.
 
 ### attributes
 
-With `.attributes` property you can list all HTML attributes on selected element as a NamedNodeMap. What is more, you can drill down on those details to get specific values:
+With `.attributes` property you can list all HTML attributes on selected element in a NamedNodeMap. What is more, you can drill down on those details to get specific values:
 
 ```js
 /* <main id="content" class="main-content" role="main">…</main> */
@@ -131,9 +131,7 @@ document.querySelector('#content').attributes;              // returns a Map wit
 document.querySelector('#content').attributes.class.value;  // returns 'main-content'
 ```
 
-While it is an excellent way of learning what attributes are used on a specific element, the attribute-specific shorthand properties will be more helpful in most scenarios.
-
-You can also list the names of all available attributes using `.getAttributesNames()`. There is also the `getAttrubute()` method that lets you pull a value of a specific attribute and a pair of condition checking methods: `hasAttributes()` that checks whether the selected element has any attribute and `hasAttribute()` that tells you if the selected element has a specified attribute.
+You can also list the names of all available attributes using `.getAttributesNames()`. With `getAttrubute()` method you can pull a value of a specific attribute. Finally, there is a pair of condition checking methods: `hasAttributes()` that checks whether the selected element has any attribute and `hasAttribute()` that tells you if the selected element has a specified attribute.
 
 ```js
 /* <main id="content" class="main-content" role="main">…</main> */
@@ -143,13 +141,13 @@ document.querySelector('#content').hasAttributes();         // returns true
 document.querySelector('#content').hasAttribute('role');    // returns true
 ```
 
-This method is helpful for non-standard attributes that don't have a dedicated shorthand.
+Those methods are helpful for non-standard attributes that don't have a dedicated shorthand.
 
 ### classList and className
 
 The `.classList` property lets you directly list all classes assigned to the selected element (in the form of DOMTokenList). It is excellent when you want to [loop](./js-loops.mdx) through to find a specific class or [manipulate the DOM](#manipulating-the-dom).
 
-On the other hand, when you want to do a simple [check or condition](./js-if-and-switch.mdx), `.className` is a great shorthand returning a string with all classes.
+On the other hand, when you want to do a simple [check or condition](./js-if-and-switch.mdx), `.className` is a great shorthand returning all classes as a string.
 
 ```js
 /* <div class="page-wrapper category-api document-page">…</div> */
@@ -163,7 +161,7 @@ The `.classList` property is the bread and butter of page manipulation, as it al
 
 ### id and tagName
 
-Similarly to class-related properties, a `.id` property returns the value of the id attribute and a `.tagName` property that returns the selected tag's name.
+Similarly to class-related properties, `.id` property returns the value of the id attribute and `.tagName` property outputs the selected tag's name.
 
 ```js
 /* <main id="content" class="main-content" role="main">…</main> */
@@ -179,27 +177,27 @@ Another extremely important properties are `.innerText` and `.innerHTML`. They a
 
 `.innerText` returns a plain text version of element content (including all child tags). Think copy-pasting fragment of the page into a chat.
 
-```js title="Example output for header of this section"
+```js title="Example output for the header of this section"
 document.querySelector('#innertext-and-innerhtml').innerText;
 // returns ".innerText and .innerHTML"
 ```
 
 `.innerHTML`, on the other hand, will return a full-blown HTML code of the selected element (including all child tags within). However, keep in mind that it will be the rendered HTML, not the original HTML (so the version adapted to your screen, your device, your context).
 
-```js title="Example output for header of this section"
+```js title="Example output for the header of this section"
 document.querySelector('#innertext-and-innerhtml').innerHTML;
 // returns ".innerText and .innerHTML<a class=\"hash-link\" href=\"#innertext-and-innerhtml\" title=\"Direct link to heading\"></a>"
 ```
 
-While it is already useful, those properties shine when you want to [manipulate your page](#changing-attributes). More on that later.
+While those are already useful for exploration,they shine when you want to [manipulate your page](#changing-attributes). More on that later.
 
 ### hidden and style
 
-Finally, there are landing page must-haves - `.hidden` and `.style`. Those two properties describe the CSS of the selected element.
+Finally, there are landing page must-haves: `.hidden` and `.style`. Those two properties describe the CSS of the selected element.
 
 `.hidden` is straightforward. It returns a boolean telling you whether the element is hidden from the frontend of the page.
 
-`.style` is much deeper, as it returns a whole object build with all possible __inline__ CSS declarations for the element. You can then drill down to return a value of a specific declaration.
+`.style` is much deeper, as it returns an object with all possible __inline__ CSS declarations for the element. You can then drill down to return a value of a specific declaration.
 
 ```js title="Example output for header of this section"
 document.querySelector('#hidden-and-style').hidden;         // returns false
@@ -210,9 +208,9 @@ As with properties mentioned previously, `.style` and `.hidden` truly shine when
 
 ## Traversing the DOM
 
-Think about the DOM as a complex hierarchy of elements. When you select a specific element, it is located somewhere within that hierarchy. And with the help of the properties, you can learn more about that web and travel through it.
+Think about the DOM as a complex hierarchy of elements. When you select a specific element, it is located somewhere within that hierarchy. And with the help of the properties, you can learn more about structure of that web and travel through it.
 
-Before jumping to the specific ways to travel through the page, let's settle the DOM naming convention for the hierarchy of elements:
+Before jumping to the how-to guide, let's first settle the DOM hierarchy naming convention.
 
 ```html title="HTML snippet"
 <article class="main-page-content">
@@ -234,7 +232,7 @@ Let's select the `div` tag from the above structure using:
 document.querySelector('article.main-page-content > div'); // selects <div>
 ```
 
-As you can see, there are three relationships between the selected `div` tag and the rest of the code:
+There are three relationships between the selected element and the rest of the code above:
 
 1. The selected `div` tag is enclosed within `<article class="main-page-content">`. The tag higher in the DOM hierarchy is called a __parent__.
 2. The selected `div` tag is not alone within the `<article class="main-page-content">` parent tag. There is also `h1`. The tags at the same level of the DOM hierarchy are called __siblings__.
@@ -242,7 +240,7 @@ As you can see, there are three relationships between the selected `div` tag and
 
 To sum up, our `div` tag has an `article` as a parent, `h1` as a sibling, and two `p` as children. Then, the first `p` has two inline children: `strong` and `a`.
 
-Let's check how to leverage all those information.
+Let's leverage all this information.
 
 ### parentElement
 
@@ -257,19 +255,19 @@ document.querySelector('article.main-page-content > div').parentElement; // sele
 For traversing the sibling elements, you can use either `.previousElementSibling` or `.nextElementSibling` to jump to the previous or next element. If there is no such element, you will get `null`.
 
 ```js
-document.querySelector('article.main-page-content > div').previousElementSibling; // selects <h1>
-document.querySelector('article.main-page-content > div').nextElementSibling; // returns null
+document.querySelector('article.main-page-content > div').previousElementSibling;   // selects <h1>
+document.querySelector('article.main-page-content > div').nextElementSibling;       // returns null
 ```
 
 :::note You Should Know
 
-You can also encounter similar properties - `.previousSibling` and `.nextSibling`. That pair is operating on HTML Nodes and will return for example whitespace between the elements (as `#test` node) or HTML comments. Unless you are sure you need it, `.previousElementSibling` or `.nextElementSibling` are better choice.
+You can also encounter similar properties: `.previousSibling` and `.nextSibling`. That pair is operating on HTML Nodes and will return more then you might expect. For example, whitespace between the elements (`#text` node) or HTML comments. Unless you are sure you need it, `.previousElementSibling` or `.nextElementSibling` are better choice.
 
 :::
 
 ### All things children
 
-When you want to go down in the hierarchy, you can use `.children` to get a Collection of HTML elements.
+When you want to go down in the hierarchy, you can use `.children` to get a collection of HTML elements.
 
 ```js
 document.querySelector('article.main-page-content > div').children; // returns collection of two <p> tags
@@ -301,7 +299,7 @@ Like with sibling selection, here also you have set of similar properties - `.ch
 
 ### The power of DOM traversing
 
-Ok, we know how to traverse the DOM, but why should we? The beauty of using the properties mentioned above is that you can leverage all [exploratory properties](#exploring-the-dom) after traversing.
+Ok, we know how to traverse the DOM, but why should we? Because sometimes you have to deal with a dynamic DOM and with traversing you can still leverage all [exploratory properties](#exploring-the-dom).
 
 ```js
 document.querySelector('article.main-page-content > div').parentElement.className; // returns "main-page-content"
@@ -319,7 +317,7 @@ Finally, you are not limited by the need to know the exact path from the current
 document.querySelector('article.main-page-content > div').closest('.main-page-content'); // selects <article class="main-page-content">
 ```
 
-Remember that `.closest` can return the initially selected element if it fulfils the new selection. If you want to stop it from happening, you can just chain it after `.parentElement`.
+Remember that `.closest` can return the initially selected element if it fulfils the new selection. If you want to stop it from happening, you can just chain it after [`.parentElement`](#parentElement).
 
 ```js
 document.querySelector('article.main-page-content > div').parentElement.closest('.main-page-content'); // selects <article class="main-page-content">
@@ -327,13 +325,13 @@ document.querySelector('article.main-page-content > div').parentElement.closest(
 
 ## Manipulating the DOM
 
-Everything discussed up to this point was nice but not breathtaking. Time to change it and jump straight into the real reason it is worth learning about the DOM. The ins and outs of manipulating it with JavaScript methods.
+Everything discussed up to this point is nice but not breathtaking. Time to change it and jump straight into the real reason it is worth learning about the DOM. The ins and outs of manipulating it with JavaScript methods.
 
 ### addEventListener
 
-One of the critical manipulation methods for marketing automation is adding events with `.addEventListener`. This method lets you perform some actions (a function) given a specific behaviour.
+One of the critical manipulation methods for marketing automation is adding events with `.addEventListener`. This method lets you perform some actions (a function) given a specific behaviour (event).
 
-In simpler words, you can tell the browser to execute a JavaScript function when the user clicks a button. Or moves the mouse out of the page to close it or change a tab. Or perform any other event you configure. You do it by attaching a specified Event Listener to a document, window or selected element:
+In simpler words, you can tell the browser to execute a JavaScript function when the user clicks a button. Or moves the mouse out of the page to close it or change a tab. Or perform any event you configure. You do it by attaching an Event Listener to a document, window or selected element:
 
 ```js title="Example of attaching Click-based Event Listener on a <button> that logs click details to console"
 document.querySelector('button').addEventListener('click', event => console.log(event));
@@ -341,38 +339,35 @@ document.querySelector('button').addEventListener('click', event => console.log(
 
 :::note You Should Know
 
-Using anonymous functions like in the example above is __not recommended__. Each anonymous function is unique for JavaScript, even if it has the same code within. This leads to two issues:
+Using anonymous functions, like in the example above, is __not recommended__. Each anonymous function is unique for JavaScript, even if it has the same code within. This leads to two issues:
 
-1. You may add multiple instances of the same anonymous function to a single element (no deduplication). It will lead to a negative performance impact and the function being triggered numerous times on event.
-2. You cannot remove such an anonymous Event Listener.
+1. You may add multiple instances of the same anonymous function to a single element (no deduplication possible). It will lead to a negative performance impact and the function being triggered numerous times per single event.
+2. You cannot remove anonymous Event Listener.
 
 In real-world scenarios, use named functions (unless you are absolutely sure what you are doing and have booked some time for debugging in the future):
 
 ```js
-function consoleLogEvent(event) {
-    console.log(event)
-}
-
-document.querySelector('button').addEventListener('click', consoleLogEvent);
+const logEvent = event => console.log(event);
+document.querySelector('button').addEventListener('click', logEvent);
 ```
 
 It will allow you to easily remove Event Listener (by referencing the target, event type and named function) once it is no longer needed:
 
 ```js
-document.querySelector('button').removeEventListener('click', consoleLogEvent);
+document.querySelector('button').removeEventListener('click', logEvent);
 ```
 
 :::
 
 #### Event types
 
-There are over a hundred available events that you can use, so I will focus only on the most useful ones for our Marketing Automation needs.
+There are over a hundred available events that you can use, so I will focus only on the most useful for our Marketing Automation needs.
 
 ##### click
 
-Capturing a click event is probably the most popular event in the world wide web. Technically, it's a shorthand for two separate events (that you can listen for separately) - `mousedown` and `mouseup`.
+Capturing a `click` event is probably the most popular event in the world wide web. Technically, it's a shorthand for two separate events (that you can listen for separately) - `mousedown` and `mouseup`.
 
-The interesting part is that the event captures the number of consecutive clicks happening in short timeframe, so you can distinguish single, double, tripleclicks:
+The interesting tidbit is that the event captures the number of consecutive clicks happening in short timeframe, so you can distinguish single, double, tripleclicks:
 
 ```js
 const logClickCount = event => console.log(`Click count: ${event.detail}`);
@@ -381,7 +376,7 @@ document.querySelector('button').addEventListener('click', logClickCount);
 
 ##### submit
 
-Another marketing must-have is the submit event. It is triggered on the valid submission of a form.
+Another marketing must-have is the `submit` event. It is triggered on the valid submission of a form.
 
 ```js
 const logSubmissionTimestamp = event => console.log(`Submission timestamp: ${event.timeStamp}`); // miliseconds since the page/script load
@@ -400,22 +395,22 @@ document.querySelector('form').addEventListener('submit',
 );
 ```
 
-This approach allows you to implement custom validation or data processing while benefiting from the HTML5 form backbone. Perfect when you want to push your form submission to a [Code Resource](../usecase/sfmc-code-resource.mdx#good-form-backend-with-code-resource).
+This approach allows you to implement custom validation or data processing while benefiting from the HTML5 form backbone. Perfect when you want to push your form submission to a [Code Resource](../usecase/sfmc-code-resource.mdx#good-form-backend-with-code-resource) asynchronously.
 
 ##### focus & blur
 
-Other events that are very useful for forms are focus and blur. The first one is triggered when an element gets into focus; the other on the opposite. What does it mean? Let's say you have a form. When the user clicks on the input, the input element gets focused. When he clicks on something else (another element, submit button, or just anywhere else), it triggers a blur event.
+Other events that are very useful for forms (and more) are `focus` and `blur`. The first one is triggered when an element gets into focus; the other on the opposite. What does it mean? Let's say you have a form. When the user clicks on the input, that element gets focused. When he clicks on something else (another input, submit button, or just anywhere else), it triggers a `blur` event.
 
 ```js
 const logInputValue = event => console.log(event.target.value);
 document.querySelector('input[type="email"]').addEventListener('blur', logInputValue);
 ```
 
-Using blur events can be great for triggering asynchronous checks on the provided data. For example, the user finishes writing the email and goes to the following field. The Event Listener can then make an asynchronous call to the [Code Resource backend](../usecase/sfmc-code-resource.mdx#good-form-backend-with-code-resource). It will look up whether this record is an existing contact or needs to be created in Salesforce Sales Cloud to generate the Contact ID and return the Subscriber Key back to the form's hidden field.
+Using `blur` events can be great for triggering asynchronous checks on the provided data. For example, when the user finishes writing the email and goes to the following field, the Event Listener can then make an asynchronous call to the [Code Resource backend](../usecase/sfmc-code-resource.mdx#good-form-backend-with-code-resource). It will look up whether the email is used by an existing contact or new record needs to be created in Salesforce Sales Cloud to generate the Contact ID and return it back to the form's hidden field.
 
 ##### mouseenter & mouseleave
 
-With mouseetner and mouseleave, you can trigger events when the user moves the pointer in or out of a specific element. The caveat - there needs to be a pointer, so the solution is not working for touchscreen users.
+With `mouseenter` and `mouseleave`, you can trigger events when the user moves the pointer in or out of a specific element. The caveat - there needs to be a pointer, so the solution is not working for touchscreen users.
 
 Still, it can be used to capture which part of the website is getting hovered over with a mouse (and for how long) or to create those annoying pop-ups trying to guilt-trip you into staying on the page:
 
@@ -424,11 +419,11 @@ const onLeavePopUp = alert('Sad Alert');
 document.documentElement.addEventListener('mouseleave', onLeavePopUp);
 ```
 
-Those are just a few key events that you can capture with `.addEventListener`. There is much more available, like keydown & keyup, select, scroll, paste, error. Check out the complete list on [MDN](https://developer.mozilla.org/en-US/docs/Web/Events#event_listing).
+Those are just a few key events that you can capture with `.addEventListener`. There is much more available, like `keydown` & `keyup`, `select`, `scroll`, `paste`, `error`. Check out the complete list on the [MDN](https://developer.mozilla.org/en-US/docs/Web/Events#event_listing).
 
 ### Changing attributes
 
-Events are fantastic, but there is something even better. Attribute manipulation. With it, you can change your website in real-time according to your logic. How? By going one step further with what you already learned above.
+Events are fantastic, but there is something even better. Attribute manipulation. With it, you can change your website in real-time according to your logic. How? By going one step further with what you have already learned.
 
 For example, you can add, remove and toggle (add if it wasn't there or remove if it was) CSS classes with [`.classlist`](#classlist-and-classname):
 
@@ -443,10 +438,10 @@ And just like you could get custom [attributes](#attributes), you can also creat
 
 ```js
 /* <main id="content" class="main-content" role="main">…</main> */
-document.querySelector('#content').setAttribute('data-columns', '3'); // returns 'main'
+document.querySelector('#content').setAttribute('data-columns', '3'); // adds data-columns="3" attribute
 ```
 
-But probably the most useful feature is possibility to alter the properties:
+Probably the most useful manipulation feature is possibility to alter the properties:
 
 ```js
 /* <input type="checkbox" id="isOptedIn" name="isOptedIn"> */
@@ -460,9 +455,9 @@ document.querySelector('#isOptedIn').hidden;            // returns false, as che
 document.querySelector('#isOptedIn').hidden = true;     // hides the checkbox
 ```
 
-You can do the same with [`.innerText` and `.innerHTML`](#innerText-and-innerHTML), [`.style.display`](#hidden-and-style) and more.
+You can do the same with [`.innerText`/`.innerHTML`](#innerText-and-innerHTML), [`.style.display`](#hidden-and-style) and more.
 
-Finally, you can mix DOM manipulation methods and change attributes on specific [events](#event-types):
+Finally, you can mix DOM manipulation methods and change attributes in response to specific [events](#event-types):
 
 ```js {5}
 document.querySelector('form').addEventListener('submit',
@@ -476,6 +471,6 @@ document.querySelector('form').addEventListener('submit',
 
 Document Object Model can be used to adapt your website in real-time, fill in hidden fields with backend calls or even automate your processes through developer console. You are only limited by your imagination (and website performance).
 
-## Use Cases
+## Marketing Cloud Use Cases
 
-1. [Tailor with Data](../usecase/tailor-with-data.mdx) - how to leverage DOM manipulation and personalisation strings to create dynamic experiences for your customers.
+1. [Tailor with Data](../usecase/tailor-with-data.mdx) - leverage DOM manipulation and personalisation strings to create dynamic experiences for your customers.
