Link to another Code Resource use case by Michał Rzepka

--- a/docs/usecase/sfmc-code-resource.mdx
+++ b/docs/usecase/sfmc-code-resource.mdx
@@ -293,7 +293,7 @@ With the flexibility of Code Resources, the sky is the limit for compelling use 
 
 1. Protect your Cloud Page Forms from spambots with [Google reCaptcha v2](https://ampscript.xyz/how-tos/how-to-implement-google-recaptcha-on-marketing-cloud-forms/) and [v3](https://ampscript.xyz/how-tos/how-to-add-recaptcha-v3-to-your-forms-in-salesforce-marketing-cloud/) by [Ivan Razine](https://www.linkedin.com/in/ivanrazine/).
 2. Run [SSJS within a Journey Activity](https://www.linkedin.com/pulse/ssjs-journey-builder-sascha-huwald/) by [Sascha Huwald](https://www.linkedin.com/in/sascha-huwald/).
-3. Create a custom Chrome search engine that can find and directly open SFMC Data Extensions right from your URL bar by [Michał Rzepka](https://www.linkedin.com/in/michalrzepka90/) (unfortunately not yet documented - we are waiting, Michał ;)).
+3. Create a [custom Chrome search engine that can find and directly open SFMC Data Extensions right from your URL bar](https://sfmr.dev/ideas/sfmc/tools/data-extension-search-engine) by [Michał Rzepka](https://www.linkedin.com/in/michalrzepka90/).
 4. Build [Cloud Page Apps](./sfmc-cloud-page-apps.mdx) to make your and your team lives easier.
 
 Know other inspiring Code Resource use cases? Let me know!
