Fixed meta image

--- a/docs/js/js-loops.mdx
+++ b/docs/js/js-loops.mdx
@@ -3,7 +3,7 @@ id: js-loops
 title: JS Loops
 sidebar_label: Loops
 description: JavaScript offers four for loops and two while loops. What's the difference?
-image: img/og-image-javascript.png
+image: img/og/og-image-js-loops.png
 tags: [JavaScript]
 ---
 
