Added Single-Org related features on demand

--- a/docs/config/sfmc-config-features-on-demand.mdx
+++ b/docs/config/sfmc-config-features-on-demand.mdx
@@ -109,6 +109,7 @@ Guardian | Continuously monitors additional metrics like clicks, events and impr
 Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 Exclusion Scripts for Email Activity | Allows you to define custom exclusion logic evaluated at send time using AMPScript. If possible, use segmentation, suppression and auto-suppression lists due to performance reasons, but in some cases, Exclusion Script might be the only way. There is also a matching feature for Email Studio. Ask for both. | [Journey Builder Exclusion Scripts](https://help.salesforce.com/articleView?id=000320456&type=1&mode=1) | Free
+Salesforce Activities for Single Org | By default integrated Single Org SFMC can use Salesforce Journey Activities (both Data Entry as well as Data Update ones) only on Parent BU, but Support can unlock those also for all Child BUs | N/A | Free
 
 ## Automation Studio Features
 
@@ -134,6 +135,7 @@ Feature Name | Description | Documentation | Type
 -- | -- | -- | --
 SOAP Triggered Send Prioritization | Allows you to declare priority for your Triggered Sends created via API. | [Triggered Send Priority](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-apis.meta/mc-apis/creating_a_triggered_send_using_the_async_api.htm) | Free
 SOAP Disable Datetime Normalisation | By default dates coming to Marketing Cloud via SOAP API will be normalised. You can ask to disable it. | [Datetime Normalisation](https://developer.salesforce.com/docs/atlas.en-us.noversion.mc-apis.meta/mc-apis/incoming_date_normalization.htm) | Free
+Salesforce AMPScript Functions for Single Org | By default integrated Single Org SFMC can use Salesforce AMPScript functions (like `RetrieveSalesforceObjects`) only on Parent BU, but Support can unlock those also for all Child BUs | N/A | Free
 
 :::note You Should Know
 
