Update of Export, Import & Document SFMC Roles article

--- a/docs/docs-and-snippets.mdx
+++ b/docs/docs-and-snippets.mdx
@@ -14,7 +14,7 @@ import { LeadText } from '../src/components/LeadText.js';
 
 Salesforce Marketing Cloud is a complex and flexible tool. This combination is a dream-come-true set for enterprise Marketing Automation tools, but on the other hand, it enables mistakes and messy solutions. Find the right path to success through a best-practice fuelled checklist full of tool-based explanations and examples.
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/zen-of-sfmc">Read about Zen of SFMC</a>
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="./zen-of-sfmc">Read about Zen of SFMC</a>
 
 ## Server-Side JavaScript
 
@@ -34,7 +34,7 @@ SSJS is an XX-century version of JavaScript paired with proprietary libraries cr
 - [MobileConnect Phone Change](./ssjs/ssjs-snippet-mobileconnect-phone-change.mdx)
 - [SSJS Script Template](./ssjs/ssjs-snippet-ssjs-script-template.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ssjs/ssjs-if-and-switch">Read about SSJS</a>
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/ssjs/">Read about SSJS</a>
 
 ## JavaScript
 
@@ -46,7 +46,11 @@ In this part, I am gathering selected elements of modern vanilla JavaScript that
 - [Loops](./js/js-loops.mdx)
 - [Document Object Model (DOM)](./js/js-dom.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/js/js-if-and-switch">Read about JavaScript</a>
+### JS Snippets
+
+- [Export, Import & Document Roles in Salesforce Marketing Cloud](./js/js-snippet-export-import-document-sfmc-roles.mdx)
+
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/javascript/">Read about JavaScript</a>
 
 ## AMPScript
 
@@ -61,7 +65,7 @@ AMPScript is a proprietary scripting language in Salesforce Marketing Cloud alon
 
 - [AMPScript in SSJS](./ssjs/ssjs-snippet-ampscript-in-ssjs.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/ampscript/ampscript-style-guide">Read about AMPScript</a>
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/ampscript/">Read about AMPScript</a>
 
 ## SFMC SQL
 
@@ -88,7 +92,7 @@ To fully leverage the Salesforce Marketing Cloud Data Extensions and Automation 
 - [Debugging Email Sends](./sql/sfmc-sql-snippet-debugging-email-sends.mdx)
 - [Debugging Value Length](./sql/sfmc-sql-snippet-debugging-value-length.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/sql/sfmc-sql-basics">Read about SFMC SQL</a>
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/sfmc-sql/">Read about SFMC SQL</a>
 
 ## SFMC Config
 
@@ -99,7 +103,7 @@ Many things in Salesforce Marketing Cloud aren't coding but have a massive impac
 - [Features On Demand](./config/sfmc-config-features-on-demand.mdx)
 - [Behavioral Triggers](./config/sfmc-config-behavioral-triggers.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/config/sfmc-config-system-data-views">Read about SFMC Config</a>
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/sfmc-config/">Read about SFMC Config</a>
 
 ## SFMC Use Cases
 
@@ -112,8 +116,7 @@ Knowing how to code is one thing. Knowing what to code is another. In Use Cases,
 - [Enhanced Send Log](./usecase/sfmc-enhanced-send-log.mdx)
 - [Contact Deletion Process](./usecase/sfmc-contact-deletion.mdx)
 
-<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="https://mateuszdabrowski.pl/docs/usecase/sfmc-cloud-apps">Read about SFMC Config</a>
-
+<a class="button button--outline button--lg button--primary col col--6 col--offset-3" href="../docs/category/sfmc-use-cases/">Read about SFMC Config</a>
 
 ## Changes
 
